# learn-graphics

./: .gitignore  CMakeLists.txt  README.md  build.bat
assets/cube_model/: cube.fbx
assets/dgs/: dgs.mtl
assets/intellij/: intellij.mtl
assets/lock_model/: 3dfun.mtl
assets/lock_model_fbx/: 3dfun.fbx
assets/model/: model.mtl
assets/shaders/: default.frag  default.vert  grid.frag  grid.vert  lit.frag  lit.vert  screen.frag  screen.vert  unlit.frag
src/: camera.h  hsv2rgb.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
